simon_testbench/Lab6_BB/Lab6/software/.metadata/.plugins/org.eclipse.cdt.ui/Hello_World_new_2.build.log
18:42:33 **** Incremental Build of configuration Nios II for project Hello_World_new_2 ****
make all 
Info: Building ../Hello_World_new_2_bsp/
make --no-print-directory -C ../Hello_World_new_2_bsp/
[BSP build complete]
Info: Compiling CheckSignal.c to obj/default/CheckSignal.o
nios2-elf-gcc -xc -MP -MMD -c -I../Hello_World_new_2_bsp//HAL/inc -I../Hello_World_new_2_bsp/ -I../Hello_World_new_2_bsp//drivers/inc -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall  -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o "obj/default/CheckSignal.o" "CheckSignal.c"
In file included from CheckSignal.c:10:
CheckSignal.h: In function 'arrayLengt':
CheckSignal.h:19:39: error: 'gitarFrequency_mHz' undeclared (first use in this function); did you mean 'CheckInputgitarFrequency_mHz'?
   19 |     int arrayLengt() { return (sizeof(gitarFrequency_mHz) / sizeof(gitarFrequency_mHz[0])); }
      |                                       ^~~~~~~~~~~~~~~~~~
      |                                       CheckInputgitarFrequency_mHz
CheckSignal.h:19:39: note: each undeclared identifier is reported only once for each function it appears in
CheckSignal.c: In function 'CheckClose':
CheckSignal.c:27:34: warning: comparison between pointer and integer
   27 |         if (i == 0 && arrayLengt <= halfWay(gitarFrequency_mHz[i], gitarFrequency_mHz[i+1]))
      |                                  ^~
CheckSignal.c:35:73: warning: comparisons like 'X<=Y<=Z' do not have their mathematical meaning [-Wparentheses]
   35 |         else if(halfWay(gitarFrequency_mHz[i], gitarFrequency_mHz[i+1]) < InputFrequency <= halfWay(gitarFrequency_mHz[i+1], gitarFrequency_mHz[i+1]))
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
In file included from CheckSignal.c:10:
CheckSignal.h: In function 'arrayLengt':
CheckSignal.h:19:93: warning: control reaches end of non-void function [-Wreturn-type]
   19 |     int arrayLengt() { return (sizeof(gitarFrequency_mHz) / sizeof(gitarFrequency_mHz[0])); }
      |                                                                                             ^
make: *** [Makefile:726: obj/default/CheckSignal.o] Error 1

18:42:33 Build Finished (took 165ms)

